docs/api/qiskit/2.3/qiskit.circuit.library.U1Gate.mdx
---
title: U1Gate (v2.3)
description: API reference for qiskit.circuit.library.U1Gate in qiskit v2.3
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.U1Gate
---

# U1Gate

<Class id="qiskit.circuit.library.U1Gate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/library/standard_gates/u1.py#L24-L170" signature="qiskit.circuit.library.U1Gate(theta, label=None)" modifiers="class">
  Bases: [`Gate`](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")

  Single-qubit rotation about the Z axis.

  This is a diagonal gate. It can be implemented virtually in hardware via framechanges (i.e. at zero error and duration).

  <Admonition title="Warning" type="caution">
    This gate is deprecated. Instead, the following replacements should be used

$$
U1(\theta) = P(\theta)= U(0,0,\theta)
$$

    ```python
    circuit = QuantumCircuit(1)
    circuit.p(lambda, 0) # or circuit.u(0, 0, lambda, 0)
    ```
  </Admonition>

  Circuit symbol:

  ```text
       ┌───────┐
  q_0: ┤ U1(θ) ├
       └───────┘
  ```

  Matrix representation:

$$
U1(\theta) =
\begin{pmatrix}
1 & 0 \\
0 & e^{i\theta}
\end{pmatrix}
$$

  Examples:

$$
U1(\theta = \pi) = Z
$$

$$
U1(\theta = \pi/2) = S
$$

$$
U1(\theta = \pi/4) = T
$$

  <Admonition title="See also" type="note">
    `RZGate`: This gate is equivalent to RZ up to a phase factor.

    > $$
    > U1(\theta) = e^{i{\theta}/2} RZ(\theta)
    > $$

    `U3Gate`: U3 is a generalization of U2 that covers all single-qubit rotations, using two X90 pulses.

    Reference for virtual Z gate implementation: [1612.00858](https://arxiv.org/abs/1612.00858)
  </Admonition>

  **Parameters**

  *   **theta** (*ParameterValueType*) – The rotation angle.
  *   **label** ([*str*](https://docs.python.org/3/library/stdtypes.html#str) *| None*) – An optional label for the gate.

  ## Attributes

  ### base\_class

  <Attribute id="qiskit.circuit.library.U1Gate.base_class">
    Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.

    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioral perspective. In particular, you should *not* override [`base_class`](#qiskit.circuit.library.U1Gate.base_class "qiskit.circuit.library.U1Gate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrized gate with a particular set of parameters for the purposes of distinguishing it in a [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") from the full parametrized gate.

    This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:

    ```python
    >>> isinstance(XGate(), XGate)
    True
    >>> type(XGate()) is XGate
    False
    >>> XGate().base_class is XGate
    True
    ```

    In general, you should not rely on the precise class of an instruction; within a given circuit, it is expected that `Instruction.name` should be a more suitable discriminator in most situations.
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.U1Gate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.U1Gate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.U1Gate.label">
    Return instruction label
  </Attribute>

  ### mutable

  <Attribute id="qiskit.circuit.library.U1Gate.mutable">
    Is this instance is a mutable unique instance or not.

    If this attribute is `False` the gate instance is a shared singleton and is not mutable.
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.U1Gate.name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.U1Gate.num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.U1Gate.num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.U1Gate.params">
    The parameters of this `Instruction`. Ideally these will be gate angles.
  </Attribute>

  ## Methods

  ### add\_decomposition

  <Function id="qiskit.circuit.library.U1Gate.add_decomposition" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L320-L325" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.U1Gate.broadcast_arguments" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/gate.py#L199-L256" signature="broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** ([*list*](https://docs.python.org/3/library/stdtypes.html#list)) – List of quantum bit arguments.
    *   **cargs** ([*list*](https://docs.python.org/3/library/stdtypes.html#list)) – List of classical bit arguments.

    **Returns**

    A tuple with single arguments.

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – If the input is not valid. For example, the number of arguments does not match the gate expectation.

    **Return type**

    [*Iterable*](https://docs.python.org/3/library/typing.html#typing.Iterable)\[[tuple](https://docs.python.org/3/library/stdtypes.html#tuple)\[[list](https://docs.python.org/3/library/stdtypes.html#list), [list](https://docs.python.org/3/library/stdtypes.html#list)]]
  </Function>

  ### control

  <Function id="qiskit.circuit.library.U1Gate.control" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/library/standard_gates/u1.py#L115-L146" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None, annotated=None)">
    Return a controlled version of the U1 gate.

    For a single control qubit, the controlled gate is implemented as [`CU1Gate`](qiskit.circuit.library.CU1Gate "qiskit.circuit.library.CU1Gate"). For more than one control qubits, the controlled gate is implemented as `MCU1Gate`. In each case, the value of `annotated` is ignored.

    **Parameters**

    *   **num\_ctrl\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int)) – Number of controls to add. Defauls to `1`.
    *   **label** ([*str*](https://docs.python.org/3/library/stdtypes.html#str) *| None*) – Optional gate label. Defaults to `None`.
    *   **ctrl\_state** ([*str*](https://docs.python.org/3/library/stdtypes.html#str)  *|*[*int*](https://docs.python.org/3/library/functions.html#int) *| None*) – The control state of the gate, specified either as an integer or a bitstring (e.g. `"110"`). If `None`, defaults to the all-ones state `2**num_ctrl_qubits - 1`
    *   **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool) *| None*) – Ignored.

    **Returns**

    A controlled version of this gate.
  </Function>

  ### copy

  <Function id="qiskit.circuit.library.U1Gate.copy" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L430-L445" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str)) – name to be given to the copied circuit, if `None` then the name stays the same.

    **Returns**

    a copy of the current instruction, with the name updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### inverse

  <Function id="qiskit.circuit.library.U1Gate.inverse" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/library/standard_gates/u1.py#L148-L160" signature="inverse(annotated=False)">
    Return inverted U1 gate ($U1(\lambda)^{\dagger} = U1(-\lambda))$

    **Parameters**

    **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool)) – when set to `True`, this is typically used to return an [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation") with an inverse modifier set instead of a concrete [`Gate`](qiskit.circuit.Gate "qiskit.circuit.Gate"). However, for this class this argument is ignored as the inverse of this gate is always a [`U1Gate`](#qiskit.circuit.library.U1Gate "qiskit.circuit.library.U1Gate") with inverse parameter values.

    **Returns**

    inverse gate.

    **Return type**

    [U1Gate](#qiskit.circuit.library.U1Gate "qiskit.circuit.library.U1Gate")
  </Function>

  ### is\_parameterized

  <Function id="qiskit.circuit.library.U1Gate.is_parameterized" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L285-L290" signature="is_parameterized()">
    Return whether the `Instruction` contains [compile-time parameters](circuit#circuit-compile-time-parameters).
  </Function>

  ### power

  <Function id="qiskit.circuit.library.U1Gate.power" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/gate.py#L63-L94" signature="power(exponent, annotated=False)">
    Raise this gate to the power of `exponent`.

    Implemented either as a unitary gate (ref. [`UnitaryGate`](qiskit.circuit.library.UnitaryGate "qiskit.circuit.library.UnitaryGate")) or as an annotated operation (ref. [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation")). In the case of several standard gates, such as [`RXGate`](qiskit.circuit.library.RXGate "qiskit.circuit.library.RXGate"), when the power of a gate can be expressed in terms of another standard gate that is returned directly.

    **Parameters**

    *   **exponent** ([*float*](https://docs.python.org/3/library/functions.html#float)) – the power to raise the gate to
    *   **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool)) – indicates whether the power gate can be implemented as an annotated operation. In the case of several standard gates, such as [`RXGate`](qiskit.circuit.library.RXGate "qiskit.circuit.library.RXGate"), this argument is ignored when the power of a gate can be expressed in terms of another standard gate.

    **Returns**

    An operation implementing `gate^exponent`

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – If gate is not unitary
  </Function>

  ### repeat

  <Function id="qiskit.circuit.library.U1Gate.repeat" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L493-L523" signature="repeat(n)">
    Creates an instruction with `self` repeated $n$ times.

    **Parameters**

    **n** ([*int*](https://docs.python.org/3/library/functions.html#int)) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.circuit.library.U1Gate.reverse_ops" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L347-L371" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### soft\_compare

  <Function id="qiskit.circuit.library.U1Gate.soft_compare" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L216-L256" signature="soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool)
  </Function>

  ### to\_matrix

  <Function id="qiskit.circuit.library.U1Gate.to_matrix" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/gate.py#L49-L61" signature="to_matrix()">
    Return a Numpy.array for the gate unitary matrix.

    **Returns**

    if the Gate subclass has a matrix definition.

    **Return type**

    np.ndarray

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – If a Gate subclass does not implement this method an exception will be raised when this base class method is called.
  </Function>

  ### to\_mutable

  <Function id="qiskit.circuit.library.U1Gate.to_mutable" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L145-L153" signature="to_mutable()">
    Return a mutable copy of this gate.

    This method will return a new mutable copy of this gate instance. If a singleton instance is being used this will be a new unique instance that can be mutated. If the instance is already mutable it will be a deepcopy of that instance.
  </Function>

  ### validate\_parameter

  <Function id="qiskit.circuit.library.U1Gate.validate_parameter" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/gate.py#L258-L272" signature="validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression
  </Function>
</Class>

